{
  "version": 4,
  "terraform_version": "1.3.5",
  "serial": 160,
  "lineage": "a9e1e602-1074-cfdb-c94e-1ec50f1bd218",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "aws_make",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "sub-1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08fdec01f5df9998f",
            "arn": "arn:aws:ec2:us-east-1:902826379983:instance/i-04ee17faaadecb96b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04ee17faaadecb96b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "awscert",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-029f1f6ac11d05b4e",
            "private_dns": "ip-192-168-1-8.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.1.8",
            "public_ip": "3.238.77.113",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-010cf1c91d194da97",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ca1d6fd4bc52bd63",
            "tags": {
              "Name": "MY_SERVER-server_name-sub-1"
            },
            "tags_all": {
              "Name": "MY_SERVER-server_name-sub-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-098b7288f062ebc4e"
            ]
          },
          "dependencies": [
            "aws_security_group.mysg",
            "aws_subnet.main-subnet"
          ]
        },
        {
          "index_key": "sub-2",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08fdec01f5df9998f",
            "arn": "arn:aws:ec2:us-east-1:902826379983:instance/i-0d2354f4d3870eff6",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d2354f4d3870eff6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "awscert",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f35c5526ce2a147b",
            "private_dns": "ip-192-168-2-168.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.2.168",
            "public_ip": "3.86.227.57",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-074f03c266c878db4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f9a94ddadc6638d4",
            "tags": {
              "Name": "MY_SERVER-server_name-sub-2"
            },
            "tags_all": {
              "Name": "MY_SERVER-server_name-sub-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-098b7288f062ebc4e"
            ]
          },
          "dependencies": [
            "aws_security_group.mysg",
            "aws_subnet.main-subnet"
          ]
        },
        {
          "index_key": "sub-3",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08fdec01f5df9998f",
            "arn": "arn:aws:ec2:us-east-1:902826379983:instance/i-0e6219f7732ed46f8",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1e",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e6219f7732ed46f8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "awscert",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ea3037cca4e7eb76",
            "private_dns": "ip-192-168-3-68.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.3.68",
            "public_ip": "34.207.83.171",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0325b8784a77def47",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0894586e373ad5747",
            "tags": {
              "Name": "MY_SERVER-server_name-sub-3"
            },
            "tags_all": {
              "Name": "MY_SERVER-server_name-sub-3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-098b7288f062ebc4e"
            ]
          },
          "dependencies": [
            "aws_security_group.mysg",
            "aws_subnet.main-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:902826379983:internet-gateway/igw-0c9d91d692c206c32",
            "id": "igw-0c9d91d692c206c32",
            "owner_id": "902826379983",
            "tags": {
              "Name": "internet_gateway"
            },
            "tags_all": {
              "Name": "internet_gateway"
            },
            "vpc_id": "vpc-0b778a8bf9697b4f2"
          },
          "dependencies": [
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "route_only",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c9d91d692c206c32",
            "id": "r-rtb-01c436823d88e3af21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01c436823d88e3af2",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_route_table.route_1",
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:902826379983:route-table/rtb-01c436823d88e3af2",
            "id": "rtb-01c436823d88e3af2",
            "owner_id": "902826379983",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "my_route_table"
            },
            "tags_all": {
              "Name": "my_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b778a8bf9697b4f2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "sub-1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-086baa568058f905c",
            "route_table_id": "rtb-01c436823d88e3af2",
            "subnet_id": "subnet-0ca1d6fd4bc52bd63"
          },
          "dependencies": [
            "aws_route_table.route_1",
            "aws_subnet.main-subnet",
            "aws_vpc.main-vpc"
          ]
        },
        {
          "index_key": "sub-2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-048c4414c8f72ff51",
            "route_table_id": "rtb-01c436823d88e3af2",
            "subnet_id": "subnet-0f9a94ddadc6638d4"
          },
          "dependencies": [
            "aws_route_table.route_1",
            "aws_subnet.main-subnet",
            "aws_vpc.main-vpc"
          ]
        },
        {
          "index_key": "sub-3",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f2a355bb3aa20e36",
            "route_table_id": "rtb-01c436823d88e3af2",
            "subnet_id": "subnet-0894586e373ad5747"
          },
          "dependencies": [
            "aws_route_table.route_1",
            "aws_subnet.main-subnet",
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mysg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:902826379983:security-group/sg-098b7288f062ebc4e",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-098b7288f062ebc4e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "902826379983",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "security_1"
            },
            "tags_all": {
              "Name": "security_1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b778a8bf9697b4f2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "sub-1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:902826379983:subnet/subnet-0ca1d6fd4bc52bd63",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ca1d6fd4bc52bd63",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "902826379983",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "MY_SUBNET-subnet-sub-1"
            },
            "tags_all": {
              "Name": "MY_SUBNET-subnet-sub-1"
            },
            "vpc_id": "vpc-0b778a8bf9697b4f2"
          },
          "dependencies": [
            "aws_vpc.main-vpc"
          ]
        },
        {
          "index_key": "sub-2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:902826379983:subnet/subnet-0f9a94ddadc6638d4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f9a94ddadc6638d4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "902826379983",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "MY_SUBNET-subnet-sub-2"
            },
            "tags_all": {
              "Name": "MY_SUBNET-subnet-sub-2"
            },
            "vpc_id": "vpc-0b778a8bf9697b4f2"
          },
          "dependencies": [
            "aws_vpc.main-vpc"
          ]
        },
        {
          "index_key": "sub-3",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:902826379983:subnet/subnet-0894586e373ad5747",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "192.168.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0894586e373ad5747",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "902826379983",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "MY_SUBNET-subnet-sub-3"
            },
            "tags_all": {
              "Name": "MY_SUBNET-subnet-sub-3"
            },
            "vpc_id": "vpc-0b778a8bf9697b4f2"
          },
          "dependencies": [
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:902826379983:vpc/vpc-0b778a8bf9697b4f2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0dc5d364f9f72dfa9",
            "default_route_table_id": "rtb-0acf2d7899dfe8e15",
            "default_security_group_id": "sg-0f6fc792356d96dc9",
            "dhcp_options_id": "dopt-0d2360c48a2176b5f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b778a8bf9697b4f2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0acf2d7899dfe8e15",
            "owner_id": "902826379983",
            "tags": {
              "Name": "main-vpc"
            },
            "tags_all": {
              "Name": "main-vpc"
            }
          }
        }
      ]
    }
  ]
}